<resources>
    <string name="app_name">My Inventory App</string>

    <string name="delete_all">Delete All</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="add_image">Add image</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_name">Product Name</string>
    <string name="email">Supplier email</string>
    <string name="save_product">Save product to database</string>
    <string name="add_product">Add product</string>
    <string name="empty_view">No products in the database, add some!</string>
    <string name="name">Name:</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="supplier_email">Supplier email:</string>
    <string name="price_per_unit">Price per units</string>
    <string name="quantity_stock">Quantity in stock:</string>
    <string name="sell">Sell product</string>

</resources>